Added derivation of lsd for eigenvalues, and eigenvectors.

--- a/preamble.sty
+++ b/preamble.sty
@@ -4,7 +4,7 @@
 \usepackage{booktabs}       % professional-quality tables
 \usepackage{nicefrac}       % compact symbols for 1/2, etc.
 \usepackage{microtype}      % microtypography
-\usepackage{times}             % times font
+% \usepackage{times}             % times font
 \usepackage{mathrsfs}      % Added by Alden, for script font.
 \usepackage{ragged2e}     % Added by Alden, for no indent.
 \usepackage{parskip}        % Added by Alden, for skips between paragraphs.
