--- a/random-matrix-basics/random-matrix-basics.tex
+++ b/random-matrix-basics/random-matrix-basics.tex
@@ -345,7 +345,7 @@ and the weight of the atom is given by
 \begin{align*}
 \lim_{\varepsilon \to 0} - \varepsilon i m_{B}(\theta + \varepsilon i) 
 & = \frac{-1}{\ell \theta_\ell v_{\gamma}'(\theta_l)} = \frac{(v_{\gamma}^{-1})'(-1/\ell)}{\ell \theta_{\ell}} \\
-& = \frac{\ell - 1 - \sqrt{\gamma}}{\ell - 1}.
+& = \frac{1 - \gamma/(\ell - 1)^2}{1 + \gamma/(\ell - 1)}.
 \end{align*}
 
 
